Fix spacing for phone numbers

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -210,7 +210,3 @@ button {
 .bottom-footer {
     border-color: #34457c;
 }
-
-.phone-margin-right {
-    margin-right: 9px;
-}
